# ircd-FEF

./: CREDITS  NEWS.md  README.md  UPGRADING  configure.ac  meson.build  meson_options.txt
authd/: Makefile.am  authd.c  meson.build  notice.c  notice.h  provider.c  provider.h  res.c
authd/providers/: dnsbl.c  opm.c
bandb/: Makefile.am  bandb.c  bantool.c  meson.build  rsdb.h
doc/: connecting-servers.rst  ircd.conf.example  ircd.motd.example  modes.txt  reference.conf
doc/features/: index.txt
doc/oper-guide/: cmodes.rst  commands.rst  (+3 more)
extensions/: Makefile.am  README  extb_canjoin.c  filter.c  hurt.c  invex_regonly.c  invite_notify.c  ip_cloaking_4.0.c  m_locops.c  m_omode.c  m_opme.c  m_webirc.c  meson.build  override.c  sno_farconnect.c  sno_globalnickchange.c  tag_message_id.c
include/: authproc.h  chmode.h  class.h  client.h  defaults.h  hook.h  ircd.h  logger.h  messages.h  msgbuf.h  newconf.h  numeric.h  patchlevel.h  s_conf.h  s_newconf.h  s_stats.h  send.h  snomask.h
ircd/: Makefile.am  authproc.c  cache.c  capability.c  channel.c  chmode.c  class.c  client.c  dns.c  hook.c  hostmask.c  ircd.c  logger.c  match.c  meson.build  msgbuf.c  newconf.c  packet.c  parse.c  s_conf.c  s_newconf.c  s_serv.c  s_user.c  scache.c  send.c  snomask.c  supported.c  tgchange.c  version.c.SH  wsproc.c
librb/: configure.ac  librb.pc.in
modules/: Makefile.am  m_chghost.c  m_dline.c  m_etrace.c  m_info.c  m_kline.c  m_knock.c  m_list.c  m_map.c  m_names.c  m_pong.c  m_resv.c  m_scan.c  m_stats.c  m_tb.c  m_testline.c  m_time.c  m_topic.c  m_trace.c  m_user.c  m_version.c  m_who.c  m_whois.c  m_xline.c  meson.build
scripts/: application.sh
ssld/: ssld.c
tests/: rb_dictionary1.c  sasl_abort1.conf  send1.c
testsuite/: ircd.conf.1  ircd.conf.2  ircd.conf.3
tools/: Makefile.am  meson.build
wsockd/: wsockd.c
(+31 files in other folders)
