# Directories
option('fhs_paths', type: 'boolean', value: false,
  description: 'Use FHS-compliant directory structure')
option('confdir', type: 'string', value: '',
  description: 'Directory for configuration files')
option('logdir', type: 'string', value: '',
  description: 'Directory for log files')
option('helpdir', type: 'string', value: '',
  description: 'Directory for help files')
option('moduledir', type: 'string', value: '',
  description: 'Directory for modules')
option('rundir', type: 'string', value: '',
  description: 'Directory for PID file')

# TLS
option('openssl', type: 'feature', value: 'auto',
  description: 'Enable OpenSSL support')
option('mbedtls', type: 'feature', value: false,
  description: 'Enable mbedTLS support')
option('gnutls', type: 'feature', value: false,
  description: 'Enable GnuTLS support')

# Features
option('sctp', type: 'feature', value: 'auto',
  description: 'Enable SCTP support')
option('hyperscan', type: 'feature', value: 'auto',
  description: 'Enable hyperscan regex support')

# Debug
option('profile', type: 'boolean', value: false,
  description: 'Enable profiling support')

# IRC protocol
option('nicklen', type: 'integer', value: 15, min: 9, max: 50,
  description: 'Maximum nickname length')
option('topiclen', type: 'integer', value: 390, min: 1,
  description: 'Maximum topic length')
